2008-09-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bootcard.c, include/bootcard.h: Make letting boot_card() handle work
	area allocation mandatory. Rename
	RTEMS_BSP_BOOTCARD_HANDLES_RAM_ALLOCATION to BSP_BOOTCARD_OPTIONS.

2008-09-23	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/utility.h: New file.

2008-09-22	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bspclean.c, include/bootcard.h: Use standardized bsp_cleanup() which
	can optionally print a message, poll for user to press key, and call
	bsp_reset(). Using this eliminates the various bsp_cleanup()
	implementations which had their own implementation and variety of
	string constants.
	* bspreset.c, bspreset_fatal.c, bspreset_loop.c: New files.

2008-09-22	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* clockdrv_shell.c: Install_clock has now static linkage.  Initialize
	rtems_clock_major with unsigned integer literal.

2008-09-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bspgetworkarea.c: Fix typo. Add debug printk statements.

2008-09-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bspgetworkarea.c: Augment to optionally know U-Boot.

2008-09-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bootcard.c: Perform bsp_start() before bsp_get_work_area().

2008-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bootcard.c: Add support for optionally having a unified work area. In
	other words, the RTEMS Workspace and C Program Heap are the same pool
	of memory.

2008-09-17	Miao Yan <yanmiaobest@gmail.com>

	* bsplibc.c, bsppost.c: Merge GSOC project code to add simple device
	only filesystem (devfs), optionally completely drop out filesystem,
	and to clean up disabling newlib reentrancy support. This dropped 17K
	from the minimum.exe for sparc/sis and arm/rtl22xx_t now has a 15K
	code space.

2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bspgetworkarea.c: New file.  This implementation should be useable